--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,7 +7,7 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/page1/page1";
+@import "../pages/childrenListPage/styles.scss";
 
 @import "../pages/page2/page2";
 
