Fixed the miss naming of the files

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,10 +7,10 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/childrenListPage/styles.scss";
+@import "../pages/childrenList/styles";
 
 @import "../pages/page2/page2";
 
-@import "../pages/page3/page3";
+@import "../pages/childDashboard/styles";
 
-@import "../pages/page4/page4";
+@import "../pages/settings/styles";
