Change the second page to a notifications page

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -9,7 +9,7 @@
 
 @import "../pages/childrenList/styles";
 
-@import "../pages/page2/page2";
+@import "../pages/notifications/styles";
 
 @import "../pages/childDashboard/styles";
 
